2010-02-17  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#152279 Tapping grouped message preview doesn't bring
		  conversation to foreground

	Because we just sent GroupMessageInvoked but messaging-ui needs
	ActionInvoked.  So send both of them, just in case.

	* src/hd-incoming-events.c:
	  Make it possible for D-Bus-Callback to have a list of values,
	  and recognize "default" to indicate sending the ActionInvoked
	  signal.

2010-02-08  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.65-1.

2010-02-04  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.65.

2010-02-04  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#154418 Text in chat-invitation notifications is unchangeable

	* src/notification-groups.conf:
	  Copied [chat-invitation] to [group-chat-invitation] with
	  a different Secondary-Text.

2009-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.62.

2009-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Fix length of NULL-terminated string array.

	Fixes: NB#151417 - Hildon Crashes always in a scenario

	* src/hd-search-service.c: Fix length of NULL-terminated string array.

2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.61.

2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#150971 - hildon-home crashed while changing background.

	* src/hd-available-backgrounds.c: Unref models correctly.

2009-12-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#149133 - Remove doc files from hildon-home deb

	* debian/rules: disable dh_installdocs.

2009-12-14  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.60.

2009-12-14  Jan Arne Petersen  <jpetersen@openismus.com>

	Strip spaces in path values from keyfiles

	Fixes: NB#148916 - Hildon-home crashes always when trying to change
	custom wallpaper

	* src/hd-imageset-background.c: Strip spaces in path values.

2009-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.59
